--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Inicio" />
+        <activity android:name=".ListaRutas" />
+        <activity android:name=".ListaFavoritos" />
+        <activity android:name=".InfoRuta" />
+        <activity android:name=".MapaRuta"></activity>
     </application>
 
 </manifest>
