--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".ListaRutas" />
         <activity android:name=".ListaFavoritos" />
         <activity android:name=".InfoRuta" />
-        <activity android:name=".MapaRuta"></activity>
+        <activity android:name=".MapaRuta" />
+        <activity android:name=".DetallesRutaActivity"></activity>
     </application>
 
 </manifest>
